markup, fix indentation issues, nested lists, etc.  Working from most
recent to oldest, I've edited back to release 110.46 (2004/06/17).

//////////////////////////////////////////////////////////////////////

//====================================================================
== Recent updates

//--------------------------------------------------------------------
[2018/05/16]::
+
Fix a bug where "`0w`" was being accepted as a prefix for a hexidecimal
word value in `Word.fromString`/`scan` (ignoring case, only "`0x`"
and "`0wx`" are valid prefixes).  This change fixes bug number 1375
from the old openbugs list.
+
owner:cs.uchicago.edu/~jhr[John Reppy]

//--------------------------------------------------------------------
[2018/05/13]::
+
Fixed a bug in the parsing of bindings involving the `op` keyword.
The parser was more restrictive than the definition.  This change
fixes bug number 1370 from the old openbugs list.
+
owner:cs.uchicago.edu/~jhr[John Reppy]

//--------------------------------------------------------------------
[2018/05/12]::
+
The lexer gave an unmatched close comment error on "`*)`", when it
should have scanned it as the tokens "`*`" "**)**".  This change
fixes bug number 330 in the old openbugs list.
+
**Note**: there is some ambiguity as to what the correct behavior
should be here.  The Definition of Standard ML (1997) only says that
unmatched __open__ comments should be signalled as errors, but the
Commentary on the Definition of Standard ML says otherwise in
Appendix D.  **SML/NJ** started signalling an error in version 0.71,
but we choose to revert to accepting this sequence, since to match
the 1997 Definition.
+
owner:cs.uchicago.edu/~jhr[John Reppy]

//--------------------------------------------------------------------
[2018/05/07]::
+
The `sameSign` function returned incorrect results in the `Int31`
and `Int32` modules.
+
owner:cs.uchicago.edu/~jhr[John Reppy]

//--------------------------------------------------------------------